
- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 12
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta12

New Commands:

- Widgets:  new command "set_item_label" #99
- Widgets:  new command "get_item_label" #99

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 11
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta11

New Features:

- Python 3.7 support


-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 10
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta10

Fixes:

- Render Callback: fixed issue with debug window freezing main callback #95
- Child Widget:    child widget now shows a horizontal scrollbar if contents are too large #91 kinda
- Multiline:       fixed issue where multiline did not work with other flags (i.e. readonly) #94
- Logger:          fixed issue with auto-scroll in logger (this is actually a Dear ImGui bug) #97
- Data Storage:    data storage is now updated at the end of each frame. No need to update by calling add_data again
- Other:           fixed issue where imgui ini file was appearing

New Commands:

- Simple Plot:  add simple plot now has a "data_source" keyword
- Table:        add table now has a "data_source" keyword
- Drawing:      delete_drawing_item

New Features:

- Data Storage: non primitive types can not by used within reaccessing data_storage

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 9