@@ -30,6 +30,7 @@ Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta12
 
 New Commands:
 
+- App:      new command "stop_dearpygui" #102
 - Widgets:  new command "set_item_label" #99
 - Widgets:  new command "get_item_label" #99
 
